# VS-CODE

./: .gitignore  README-catalog-ui.md  README.md  catalog_ui.py  datasheet_50_full_app_qa_report.csv  datasheet_50_sources.csv  datasheet_50_validation_report.csv  datasheet_links_collected.txt  datasheet_links_raw.txt  fortinet_pdfs.txt  pyproject.toml  requirements-ui.txt  requirements.txt  spec_catalog_agent.docx
app/: __init__.py  catalog_agent.py  parser.py
tests/: test_catalog_agent.py
